数据库调整到服务器

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -7,7 +7,7 @@ socket = :9090
 # 项目的路径
 chdir           = /home/workspace/heqian/heqian
 # Django的wsgi文件
-module          = website.wsgi:application
+module          = heqian.wsgi:application
 # Python虚拟环境的路径
 home            = /root/.virtualenvs/heqian
 
